examples/test/testpolicy15100.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy15100
  namespace: namespace364
spec:
  podSelector:
    matchLabels:
      key45: value20
      key8: value6
      key25: value24
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key12: value6
          key9: value13
      podSelector:
        matchLabels:
          key7: value8
